--- a/src/global_styles/animation.css
+++ b/src/global_styles/animation.css
@@ -11,3 +11,20 @@
 .bob {
   animation: MoveUpDown 3s infinite;
 }
+
+.fade-in {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 0.2s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
