global contrller for adding ships

--- a/src/global_styles/animation.css
+++ b/src/global_styles/animation.css
@@ -14,17 +14,48 @@
 
 .fade-in {
   opacity: 1;
-  animation-name: fadeInOpacity;
+  animation-name: fadeIn;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
   animation-duration: 0.2s;
 }
 
-@keyframes fadeInOpacity {
+.fade-out {
+  opacity: 1;
+  animation-name: fadeOut;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 0.2s;
+}
+
+@keyframes fadeIn {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* rotation */
+.rotate-fast {
+  animation: rotation 1.3s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
   }
 }
