--- a/src/components/help.css
+++ b/src/components/help.css
@@ -9,6 +9,16 @@
   z-index: 69;
 }
 
+.textContainer {
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 8px 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(234, 239, 255);
+}
+
 @media (max-width: 450px) {
   .helpContainer {
     display: none;
