--- a/src/components/help.css
+++ b/src/components/help.css
@@ -10,13 +10,14 @@
 }
 
 .textContainer {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 50px;
   padding: 8px 12px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: rgb(234, 239, 255);
+  background-color: rgb(27, 0, 90);
+  color: white;
 }
 
 @media (max-width: 450px) {
